# is-identifier

./: .gitattributes  .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evaluation.md
huggingface/: README.md
scripts/: smoke_test.py
space/: README.md  app.py  requirements.txt
src/is_identifier/: __init__.py  aim_extractor.py  cli.py  document_processor.py  language_detect.py  model_v1.py  modeling.py  paso1_output.py  segmenter.py  sentence_splitter.py  structure_detector.py  verb_features.py  verb_lexicon.py
tests/: conftest.py  test_aim_extractor.py  test_cli.py  test_language_detect.py  test_pipeline_inference.py  test_segmenter.py  test_sentence_splitter.py  test_structure_golden.py
