[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "is-identifier"
version = "1.0.0"
description = "Inference pipeline for identifying institutional statements in regulatory documents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Felipe Bravo-Pena" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "spacy>=3.7",
    "pypdf>=3.0",
    "python-docx",
    "pandas",
    "openpyxl",
    "torch",
    "transformers>=5.0",
    "torchcrf>=1.1.0",
]

[project.scripts]
is-identifier = "is_identifier.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
