[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "is-identifier"
version = "1.1.0"
description = "Paso 1 inference pipeline: regulatory documents to reviewable segments with institutional-statement candidates"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Felipe Bravo-Pena" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "spacy>=3.7",
    # spacy.cli imports click directly, but typer>=0.16 (pulled by spacy)
    # no longer depends on it — declare it explicitly
    "click>=8.0",
    "pypdf>=3.0",
    "python-docx",
    "pandas",
    "openpyxl",
    "torch",
    "transformers>=5.0",
    "torchcrf>=1.1.0",
]

[project.scripts]
is-identifier = "is_identifier.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
